--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-.pyc
+    # Ignore Python bytecode files
+    *.pyc
+    *.pyo
+    *.pyd
+    
+    # Ignore __pycache__ directories
+    __pycache__/
