--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-    # Ignore Python bytecode files
-    *.pyc
-    *.pyo
-    *.pyd
-    
-    # Ignore __pycache__ directories
-    __pycache__/
+# Ignore Python bytecode files
+*.pyc
+*.pyo
+*.pyd
+
+# Ignore __pycache__ directories recursively
+**/__pycache__/
